--- a/LaserJoints.vcxproj
+++ b/LaserJoints.vcxproj
@@ -13,8 +13,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D7CBB035-8CC0-4576-9C72-5076E079586B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>RobinCPP</RootNamespace>
+    <RootNamespace>LaserJoints</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>LaserJoints</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -91,7 +92,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="RobinCPP.cpp">
+    <ClCompile Include="LaserJoints.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
@@ -101,7 +102,7 @@
     <ClCompile Include="TriplerInputChangedEventHander.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="RobinCPP.manifest">
+    <Text Include="LaserJoints.manifest">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </Text>
